32 bit compositing suspension

REVIEW: 108304
BUG: 308438